--- a/public/estilo.css
+++ b/public/estilo.css
@@ -552,7 +552,24 @@ footer .line-footer p a {
   color: #fefefe;
   transform: scale(1.01);
 }
-
+.cart-link{ 
+    position: relative;
+}
+.cart-status {
+  background-color: red;
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: 12px;
+  left: 30px;
+  color: rgb(255, 255, 255);
+  font-size: 11px;
+  font-weight: 600;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 @media only screen and (max-width: 600px) {
   .button__remove-item {
     top: 0;
