--- a/views/pages/editar.ejs
+++ b/views/pages/editar.ejs
@@ -20,9 +20,9 @@
 <body>  
     
     <section class="container-finalizar">
-        <a href="/carrinho" class="cart-button">Continuar Comprando</a>
-        <h1 class="Titulo">Adicionar Endereço</h1>
-        <form class='finalizar' action="/finalizar" method="POST">
+        <a href="/finalizar" class="cart-button">Voltar</a>
+        <h1 class="Titulo">Editar Endereço</h1>
+        <form class='finalizar' action="/update/:id" method="POST">
             <label for="nome">Nome Completo:</label>
             <input type="text" name="nome" id="nome" required>    
             <br>    
@@ -52,54 +52,11 @@
             <br>    
             <label for="telefone">Telefone:</label>
             <input type="number" name="telefone" id="telefone" required>    
+            <br>    
             <br>
     
-            
+            <a class="editar" href="/update/<%= endereco.id %>">Editar Endereço</a>
     
-            <br>
-    
-            <button class="link" type="submit">Adicionar</button>
-            <br>
-            <br>
-            <ul class="container-finalizar-resultados">
-                <% endereco.forEach((endereco) => { %>
-                  <li key=<%=endereco.id%>>
-                    <strong><%=endereco.nome%> - <%=endereco.rua%></strong>
-                    <br></br><br/>
-                    <a class="editar" href="/editar/<%=endereco.id%>">Editar Endereço</a>
-                    <a class="excluir" href="/delete/<%= endereco.id %>"><i class="bi bi-trash3-fill"></i></a>
-                    
-                  </li>
-                <% }) %>
-              </ul>
-    
-        </form>
-        <br/>
-        <h1 class="Titulo">Adicionar Forma de Pagamento</h1>
-        <form action="/pagamento" method="POST">
-            <select class="select" name="forma">
-                <option value="">Escolha uma forma de pagamento</option>
-                <option value="cartão de crédito">Cartão de Crédito</option>
-                <option value="pix">Pix</option>
-                <option value="boleto">Boleto</option>
-            </select>
-    
-            <br>
-    
-            <button class="link" type="submit">Adicionar</button>
-
-            <ul class="container-finalizar-resultados">
-                <% pagamento.forEach((pagamento) => { %>
-                  <li key=<%=pagamento.id%>>
-                    <strong><%=pagamento.forma%></strong>
-                    <br></br><br/>
-                    <a class="editar" href="/editarPagamento/<%=pagamento.id %>">Editar Pagamento</a>
-                    <br></br>
-                    <a class="excluir" href="/deletePagamento/<%=pagamento.id%>"><i class="bi bi-trash3-fill"></i></a>
-                    
-                  </li>
-                <% }) %>
-              </ul>
         </form>
     </section>   
     <footer>
